--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Title</title>
+        <link rel="stylesheet" href="../dist/css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>Hello, World!</h1>
+        <p>lorem ipsum</p>
+    </body>
 </html>
